--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "intro-express",
+  "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "a basic introductory expressjs app",
+  "description": "Complete Node.js Guide",
   "main": "app.js",
   "scripts": {
-    "test": "test",
-    "start": "nodemon ./app.js localhost 3000"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
+    "start-server": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/U09Kane/intro-express.git"
-  },
-  "author": "u09kane",
+  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/U09Kane/intro-express/issues"
-  },
-  "homepage": "https://github.com/U09Kane/intro-express#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "pug": "^2.0.4"
-  },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^1.18.3"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "pug": "^2.0.3"
   }
 }
